# ruff-review

./: .reviewdog.yml  LICENSE  README.md  pyproject.toml  ruff-ci.override.toml
.github/workflows/: ci-review.yml
exampleproject/: main.py
scripts/: review.py  ruff-ci.py
